--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ practica1.html
 <head>
     <title> Autobiografia </title>
 </head>
-<body background=" c:\xampp\htdocs\Ejercisios HTML 18 33\snoopy.jpg ">
+<body background="nude.jpg">
 
 
 
@@ -14,7 +14,7 @@ practica1.html
 
 
 
-        <img src="c:\xampp\htdocs\Ejercisios HTML 18 33\yop.jfif"  width=" 350" height="245" /> <br>
+        <img src="yop.jfif"  width=" 350" height="245" /> <br>
 
     <em> Holi <br>
    Esta es mi primera pagina en HTML, mi nombre es <strong> Yosemite Itzel Martinez Domingues </strong> y soy estudiante en el CETIS 47 <br> 
@@ -58,13 +58,16 @@ practica1.html
 
  <em>  En si, no tengo un solo alimento favorito pero si hay ciertos platillos que prepatra mi mami y me gustan demaciado. <br>
 Como lo es el mole dulce, las enchiladas verdes, los chiles rellenos (de carne molida y queso) <br>
-son lo mejor del mundo, tambien el aroz blanco con verduras que cocina es super delicioso. En fin no creo ser tan complicada con el tema de la comida ya que siempre como de todo.
+son lo mejor del mundo, tambien el aroz blanco con verduras que cocina es super delicioso. <br>
+ En fin no creo ser tan complicada con el tema de la comida ya que siempre como de todo. <br>
+ 
         </em>
 
-         <img src=" c:\xampp\htdocs\Ejercisios HTML 18 33\arroz.jpg "  width=" 300" height="230" />   
-           <img src=" c:\xampp\htdocs\Ejercisios HTML 18 33\mole.jpg"  width=" 300" height="230" /> 
-            <img src=" c:\xampp\htdocs\Ejercisios HTML 18 33\enchiladitas.jpeg"  width=" 300" height="230" />
-              <img src="  c:\xampp\htdocs\Ejercisios HTML 18 33\chilito.jpg "  width=" 300" height="230" /> 
+
+         <img src="arroz.jpg "  width=" 300" height="230" />   
+           <img src="mole.jpg"  width=" 300" height="230" />
+            <img src="enchiladitas.jpeg"  width=" 300" height="230" />
+              <img src="chilito.jpg "  width=" 300" height="230" /> 
          
 
 </p>         
